# steam-presence

./: .gitignore  Cargo.toml  README.md  example.env
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docs/: COMPILE.md
old/: main.py
scripts/: install-service.sh  steam-presence.service
src/: main.rs
