[package]
name = "steam-presence-on-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-presence = "0.5"
serde_json = "1.0"
steamgriddb_api = "0.3"

[dependencies.reqwest]
features = ["default", "default-tls", "hyper-tls", "native-tls-crate", "tokio-native-tls", "json"]
version = "0.11"

[dependencies.tokio]
features = ["full"]
version = "1"
